--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,9 @@
-<app-header></app-header>
-<main class="main" role="main">
-  <div class="wrapper">
-    Main
-  </div>
-</main>
-<app-footer></app-footer>
+<div class="container">
+  <app-header [title]="title"></app-header>
+  <main class="main" role="main">
+    <div class="wrapper">
+      Main
+    </div>
+  </main>
+  <app-footer></app-footer>
+</div>
