--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,5 @@
 <header class="header" role="banner">
   <div class="wrapper">
-    Header
+    <h1 class="header__title">{{ title }}</h1>
   </div>
 </header>
