Adding basic navigation to header

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,6 @@
 <header class="header" role="banner">
   <div class="wrapper">
     <h1 class="header__title">{{ title }}</h1>
+    <app-nav></app-nav>
   </div>
 </header>
