--- a/src/app/header/nav/nav.component.html
+++ b/src/app/header/nav/nav.component.html
@@ -1,6 +1,6 @@
 <nav class="nav nav__primary" role="navigation">
-  <ul class="nav__links">
-    <li class="nav__link"><a href="#">Dashboard</a></li>
-    <li class="nav__link"><a href="#">Games</a></li>
+  <ul class="nav__list">
+    <li class="nav__list__item"><a href="#" class="nav__link">Dashboard</a></li>
+    <li class="nav__list__item"><a href="#" class="nav__link">Games</a></li>
   </ul>
 </nav>
