--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,9 @@
 <header class="header" role="banner">
   <div class="wrapper">
-    <h1 class="header__title">{{ title }}</h1>
+    <div class="header__inner">
+      <h1 class="header__title">{{ title }}</h1>
+      <app-user-avatar></app-user-avatar>
+    </div>
     <app-nav></app-nav>
   </div>
 </header>
