--- a/src/app/header/user-avatar/user-avatar.component.html
+++ b/src/app/header/user-avatar/user-avatar.component.html
@@ -1,3 +1,4 @@
-<p>
-  user-avatar works!
-</p>
+<div class="user__avatar">
+  <img class="user__img" src="" alt="User photo">
+  <p class="user__name">Username</p>
+</div>
