--- a/src/app/header/nav/nav.component.html
+++ b/src/app/header/nav/nav.component.html
@@ -1,6 +1,8 @@
 <nav class="nav nav__primary" role="navigation">
-  <ul class="nav__list">
-    <li class="nav__list__item"><a href="#" class="nav__link">Dashboard</a></li>
-    <li class="nav__list__item"><a href="#" class="nav__link">Games</a></li>
-  </ul>
+  <div class="wrapper">
+    <ul class="nav__list">
+      <li class="nav__list__item"><a href="#" class="nav__link nav__link--active">Dashboard</a></li>
+      <li class="nav__list__item"><a href="#" class="nav__link">Games</a></li>
+    </ul>
+  </div>
 </nav>
