Adding routing for dashboard and games

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
   <app-header [title]="title"></app-header>
   <main class="main" role="main">
     <div class="wrapper">
-      Main
+      <router-outlet></router-outlet>
     </div>
   </main>
   <app-footer></app-footer>
