--- a/src/app/header/nav/nav.component.html
+++ b/src/app/header/nav/nav.component.html
@@ -1,8 +1,18 @@
 <nav class="nav nav__primary" role="navigation">
   <div class="wrapper">
     <ul class="nav__list">
-      <li class="nav__list__item"><a href="#" class="nav__link nav__link--active">Dashboard</a></li>
-      <li class="nav__list__item"><a href="#" class="nav__link">Games</a></li>
+      <li class="nav__list__item"><a 
+        routerLink="/" 
+        class="nav__link"
+        routerLinkActive="nav__link--active"
+        [routerLinkActiveOptions]="{exact: true}"
+        >Dashboard</a></li>
+      <li class="nav__list__item"><a 
+        routerLink="/games" 
+        class="nav__link"
+        routerLinkActive="nav__link--active"
+        [routerLinkActiveOptions]="{exact: true}"
+        >Games</a></li>
     </ul>
   </div>
 </nav>
