Adding routing for my-profile

--- a/src/app/header/user-avatar/user-avatar.component.html
+++ b/src/app/header/user-avatar/user-avatar.component.html
@@ -1,4 +1,10 @@
 <div class="user__avatar">
-  <img class="user__img" src="" alt="User photo">
-  <p class="user__name">Username</p>
+  <a 
+    routerLink="/my-profile" 
+    class="user__profile__link">
+    <div class="user__avatar__inner">
+      <img class="user__img" src="" alt="User photo">
+      <p class="user__name">Username</p>
+    </div>
+  </a>
 </div>
