--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,3 +1,24 @@
-<p>
-  profile works!
-</p>
+<div class="profile">
+  <div class="profile__header profile__inner">
+    <h2 class="profile__heading">
+      My Profile
+    </h2>
+    <button class="btn">Edit</button>
+  </div>
+  <div class="profile__body profile__inner">
+    <dl class="profile__details">
+      <dt class="profile__label">Name</dt>
+      <dd class="profile__value">
+        <span>Katie</span> <span>Egervari</span>
+      </dd>
+      <dt class="profile__label">Avatar Image Url</dt>
+      <dd class="profile__value">
+        http://
+      </dd>
+      <dt class="profile__label">Average Number of Hours to Game Per Day</dt>
+      <dd class="profile__value">
+        2
+      </dd>
+    </dl>
+  </div>
+</div>
