Refactoring user avatar component to take values passed down from app component

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,7 +2,7 @@
   <div class="wrapper">
     <div class="header__inner">
       <h1 class="header__title">{{ title }}</h1>
-      <app-user-avatar></app-user-avatar>
+      <app-user-avatar [user]="user"></app-user-avatar>
     </div>
   </div>
   <app-nav></app-nav>
