--- a/src/app/header/user-avatar/user-avatar.component.html
+++ b/src/app/header/user-avatar/user-avatar.component.html
@@ -3,8 +3,8 @@
     routerLink="/my-profile" 
     class="user__profile__link">
     <div class="user__avatar__inner">
-      <img class="user__img" src="" alt="User photo">
-      <p class="user__name">Username</p>
+      <img class="user__img" src="/src/assets/{{ user.image }}" alt="User photo">
+      <p class="user__name">{{ user.firstName }} {{ user.lastName }}</p>
     </div>
   </a>
 </div>
