--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <app-header [title]="title"></app-header>
+  <app-header [title]="title" [user]="user"></app-header>
   <main class="main" role="main">
     <div class="wrapper">
       <router-outlet></router-outlet>
