--- a/src/app/header/user-avatar/user-avatar.component.html
+++ b/src/app/header/user-avatar/user-avatar.component.html
@@ -3,7 +3,9 @@
     routerLink="/my-profile" 
     class="user__profile__link">
     <div class="user__avatar__inner">
-      <img class="user__img" src="/src/assets/{{ user.image }}" alt="User photo">
+      <img class="user__img" 
+      [src] = "'/public/assets/' + user.image"
+      alt="{{ user.firstName }} {{ user.lastName }}">
       <p class="user__name">{{ user.firstName }} {{ user.lastName }}</p>
     </div>
   </a>
