Fixing issue where user image wasn't showing

--- a/src/app/header/user-avatar/user-avatar.component.html
+++ b/src/app/header/user-avatar/user-avatar.component.html
@@ -4,7 +4,7 @@
     class="user__profile__link">
     <div class="user__avatar__inner">
       <img class="user__img" 
-      [src] = "'/public/assets/' + user.image"
+      [src] = "'../assets/' + user.image"
       alt="{{ user.firstName }} {{ user.lastName }}">
       <p class="user__name">{{ user.firstName }} {{ user.lastName }}</p>
     </div>
