--- a/src/app/header/nav/nav.component.scss
+++ b/src/app/header/nav/nav.component.scss
@@ -6,9 +6,14 @@
     display: inline-block;
     padding: 10px;
     text-decoration: none;
+    transition: all 0.5s ease-in-out;
 
     &--active {
       background-color: #405e78;
+    }
+
+    &:hover {
+      color: white;
     }
   }
 
