--- a/src/app/features/profile/components/edit-profile/edit-profile.component.html
+++ b/src/app/features/profile/components/edit-profile/edit-profile.component.html
@@ -1,3 +1,85 @@
-<p>
-  edit-profile works!
-</p>
+<div class="profile__details__form-element" class="profile">
+  <form 
+    class="profile__form" 
+    *ngIf="user" 
+    #f="ngForm" 
+    (ngSubmit)="onSubmit()">
+  <div class="profile__header profile__inner">
+    <h2 class="profile__heading">
+      Edit My Profile
+    </h2>
+    <div class="profile__buttons">
+      <button 
+        class="btn btn--secondary" 
+        type="submit"
+        [disabled]="!f.valid">Save</button>
+      <button 
+        class="btn btn--primary"
+        (click)="onCancel($event)">Cancel</button>
+    </div>
+  </div>
+    <div 
+      class="profile__body profile__inner"
+          ngModelGroup="userData"
+          #userData="ngModelGroup"
+      >
+      <div class="profile__form__element">
+        <label 
+          class="profile__form__label"
+          for="firstName">First Name</label>
+        <input 
+          class="profile__form__input"
+          type="text"
+          name="firstName"
+          [ngModel]="user.firstName"
+          pattern="[a-zA-Z]*"
+          required
+          #firstName="ngModel" />
+          <p class="profile__form__error" *ngIf="!firstName.valid && firstName.touched">First name must only contain letters</p>
+      </div>
+      <div class="profile__form__element">
+        <label 
+          class="profile__form__label"
+          for="lastName">Last Name</label>
+        <input 
+          class="profile__form__input"
+          type="text"
+          name="lastName"
+          pattern="[a-zA-Z]*"
+          required
+          [ngModel]="user.lastName"
+          #lastName="ngModel" />
+          <p class="profile__form__error" *ngIf="!lastName.valid && lastName.touched">Last name must only contain letters</p>
+      </div>
+      <div class="profile__form__element">
+        <label 
+          class="profile__form__label"
+          for="image"
+          required
+          >Avatar Image Url</label>
+        <input 
+          class="profile__form__input" 
+          type="text" 
+          name="image" 
+          required
+          [ngModel]="user.image"
+          #image="ngModel" />
+          <p class="profile__form__error" *ngIf="!image.valid && image.touched">This field cannot be blank</p>
+      </div>
+      <div class="profile__form__element">
+        <label 
+          class="profile__form__label"
+          for="averageNumberOfHoursPerDay">Average Number of Hours to Game Per Day</label>
+        <input 
+          class="profile__form__input" 
+          type="text" 
+          name="averageNumberOfHoursPerDay" 
+          pattern="[0-9]*"
+          [ngModel]="user.averageNumberOfHoursPerDay"
+          required
+          #averageNumberOfHoursPerDay="ngModel" />
+          <p class="profile__form__error" *ngIf="!averageNumberOfHoursPerDay.valid && averageNumberOfHoursPerDay.touched">Please enter a valid number</p>
+      </div>
+    </div>
+    </form>
+</div>
