--- a/src/app/features/profile/components/edit-profile/edit-profile.component.html
+++ b/src/app/features/profile/components/edit-profile/edit-profile.component.html
@@ -2,7 +2,7 @@
   <form 
     class="profile__form" 
     *ngIf="user" 
-    #f="ngForm" 
+    [formGroup]="editProfile"
     (ngSubmit)="onSubmit()">
   <div class="profile__header profile__inner">
     <h2 class="profile__heading">
@@ -12,17 +12,14 @@
       <button 
         class="btn btn--secondary" 
         type="submit"
-        [disabled]="!f.valid">Save</button>
+        [disabled]="!editProfile.valid">Save</button>
       <button 
         class="btn btn--primary"
         (click)="onCancel($event)">Cancel</button>
     </div>
   </div>
     <div 
-      class="profile__body profile__inner"
-          ngModelGroup="userData"
-          #userData="ngModelGroup"
-      >
+      class="profile__body profile__inner">
       <div class="profile__form__element">
         <label 
           class="profile__form__label"
@@ -31,11 +28,9 @@
           class="profile__form__input"
           type="text"
           name="firstName"
-          [ngModel]="user.firstName"
-          pattern="[a-zA-Z]*"
-          required
-          #firstName="ngModel" />
-          <p class="profile__form__error" *ngIf="!firstName.valid && firstName.touched">First name must only contain letters</p>
+          formControlName="firstName"
+           />
+          <!-- <p class="profile__form__error" *ngIf="!firstName.valid && firstName.touched">First name must only contain letters</p> -->
       </div>
       <div class="profile__form__element">
         <label 
@@ -45,11 +40,9 @@
           class="profile__form__input"
           type="text"
           name="lastName"
-          pattern="[a-zA-Z]*"
-          required
-          [ngModel]="user.lastName"
-          #lastName="ngModel" />
-          <p class="profile__form__error" *ngIf="!lastName.valid && lastName.touched">Last name must only contain letters</p>
+          formControlName="lastName"
+         />
+          <!-- <p class="profile__form__error" *ngIf="!lastName.valid && lastName.touched">Last name must only contain letters</p> -->
       </div>
       <div class="profile__form__element">
         <label 
@@ -61,10 +54,9 @@
           class="profile__form__input" 
           type="text" 
           name="image" 
-          required
-          [ngModel]="user.image"
-          #image="ngModel" />
-          <p class="profile__form__error" *ngIf="!image.valid && image.touched">This field cannot be blank</p>
+          formControlName="image"
+          />
+          <!-- <p class="profile__form__error" *ngIf="!image.valid && image.touched">This field cannot be blank</p> -->
       </div>
       <div class="profile__form__element">
         <label 
@@ -73,12 +65,11 @@
         <input 
           class="profile__form__input" 
           type="text" 
-          name="averageNumberOfHoursPerDay" 
-          pattern="[0-9]*"
-          [ngModel]="user.averageNumberOfHoursPerDay"
-          required
-          #averageNumberOfHoursPerDay="ngModel" />
-          <p class="profile__form__error" *ngIf="!averageNumberOfHoursPerDay.valid && averageNumberOfHoursPerDay.touched">Please enter a valid number</p>
+          name="averageNumberOfHoursPerDay"
+          formControlName="averageNumberOfHoursPerDay"
+
+          />
+          <!-- <p class="profile__form__error" *ngIf="!averageNumberOfHoursPerDay.valid && averageNumberOfHoursPerDay.touched">Please enter a valid number</p> -->
       </div>
     </div>
     </form>
