--- a/src/app/features/profile/components/view-profile/view-profile.component.html
+++ b/src/app/features/profile/components/view-profile/view-profile.component.html
@@ -6,7 +6,7 @@
     <button class="btn" routerLink="/my-profile/edit">Edit</button>
   </div>
   <div class="profile__body profile__inner">
-    <dl class="profile__details" *ngIf="user">
+    <dl class="profile__details" *ngIf="(user$ | async) as user">
       <dt class="profile__label">Name</dt>
       <dd class="profile__value">
         <span>{{ user.firstName }}</span>&nbsp;<span>{{ user.lastName }}</span>
