--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -48,3 +48,5 @@ h1, h2, h3, h4, h5, h6 {
   max-width: 1366px;
   width: 100%;
 }
+
+.visually-hidden:not(:focus):not(:active) { position: absolute; width: 1px; height: 1px; margin: -1px;border: 0;padding: 0;white-space: nowrap;clip-path: inset(100%);clip: rect(00 0 0);overflow: hidden;}
