--- a/src/app/features/games/components/game/game.component.html
+++ b/src/app/features/games/components/game/game.component.html
@@ -2,8 +2,8 @@
   class="game card"
   [ngClass]="{
     completed: game.isComplete,
-    notStarted: (!game.isComplete && calculateProgress(game) === 0),
-    started: (!game.isComplete && calculateProgress(game) > 0)
+    notStarted: (!game.isComplete && game.percentCompleted === 0),
+    started: (!game.isComplete && game.percentCompleted > 0)
   }">
   <a routerLink="/games/{{game.id}}" 
    class="game__link">
@@ -11,8 +11,8 @@
       <div class="game__inner__text card__inner__text">
         <h3 class="game__name" *ngIf="game">{{ game.name }}</h3>
         <p class="game__stat game__stat--light">{{ game.platformName }}</p>
-        <p class="game__stat">Est. % Completed: <span class="game__stat--light">{{calculateProgress(game).toFixed(1)}}%</span></p>
-        <p class="game__stat">Completion Date: <span class="game__stat--light">9/30/2019</span></p>
+        <p class="game__stat">Est. % Completed: <span class="game__stat--light">{{ (game.percentCompleted > 0 ? game.percentCompleted.toFixed(1) : 0) }}%</span></p>
+        <p class="game__stat">Completion Date: <span class="game__stat--light">{{ game.completionDate }}</span></p>
       </div>
       <div class="game__inner__thumbnail card__inner__thumbnail">
         <img class="game__thumbnail" [src]="game.image" alt="{{ game.name }}">
