--- a/src/app/features/profile/components/view-profile/view-profile.component.html
+++ b/src/app/features/profile/components/view-profile/view-profile.component.html
@@ -1,8 +1,9 @@
 <div class="profile">
   <div class="profile__header profile__inner">
-    <h2 class="profile__heading">
+    <!-- <h2 class="profile__heading">
       My Profile
-    </h2>
+    </h2> -->
+    <app-feature-headline text="My Profile"></app-feature-headline>
     <button class="btn" routerLink="/my-profile/edit">Edit</button>
   </div>
   <div class="profile__body profile__inner">
