--- a/src/app/features/games/components/game/game.component.html
+++ b/src/app/features/games/components/game/game.component.html
@@ -5,8 +5,7 @@
     notStarted: (!game.isComplete && game.percentCompleted === 0),
     started: (!game.isComplete && game.percentCompleted > 0)
   }">
-  <a routerLink="/games/{{game.id}}" 
-   class="game__link">
+  <a [routerLink]="['/games/edit', game.id]" class="game__link">
     <div class="game__inner card__inner">
       <div class="game__inner__text card__inner__text">
         <h3 class="game__name" *ngIf="game">{{ game.name }}</h3>
