--- a/src/app/features/games/components/edit-game/edit-game.component.html
+++ b/src/app/features/games/components/edit-game/edit-game.component.html
@@ -28,8 +28,8 @@
         <label class="edit-game__form__label" for="platformId">PlatformId</label>
         <select class="edit-game__form__input" type="number" name="platformId"
           formControlName="platformId">
-          <option value="" selected="selected">Choose a platform...</option>
-          <option *ngFor="let platform of platforms" [ngValue]="platform.id">
+          <option [ngValue]="0" selected="selected">Choose a platform...</option>
+          <option *ngFor="let platform of (platforms$ | async)" [ngValue]="platform.id">
             {{ platform.name }}
           </option>
         </select>
