--- a/src/app/features/games/components/view-games/view-games.component.html
+++ b/src/app/features/games/components/view-games/view-games.component.html
@@ -3,7 +3,7 @@
     <h2 class="games__heading">
       My Games
     </h2>
-    <button class="btn" routerLink="/games/edit">Edit</button>
+    <button class="btn" routerLink="/games/add">Add Game</button>
   </div>
   <div class="games__body">
     <app-game 
