--- a/src/app/features/games/components/edit-game/edit-game.component.scss
+++ b/src/app/features/games/components/edit-game/edit-game.component.scss
@@ -1,9 +1,11 @@
+@import '../../../../../styles/variables.scss';
+
 .edit-game {
   .btn {
-    background-color: #d6dbdf;
+    background-color: $text-light;
     border: none;
     border-radius: 0.25rem;
-    color: #30495f;
+    color: $blue;
     font-size: 1.4rem;
     margin-left: 10px;
     padding: 10px 80px;
@@ -11,12 +13,12 @@
     transition: all 0.5s ease-in-out;
 
     &--danger {
-      background-color: #b43f3f;
-      color: #d6dbdf;
+      background-color: $red;
+      color: $text-light;
     }
 
     &--secondary {
-      background-color: #76b43f;
+      background-color: $green;
     }
 
     &:hover {
@@ -37,7 +39,7 @@
     }
 
     &__input {
-      background-color: #d6dbdf;
+      background-color: $text-light;
       border: none;
       font-size: 1em;
       padding: 5px;
@@ -61,9 +63,9 @@
   }
 
   &__inner {
-    background-color: #30495f;
+    background-color: $blue;
     border-radius: 0.5rem;
-    color: #d6dbdf;
+    color: $text-light;
     padding: 1em;
 
     & + .edit-game__inner {
