--- a/src/app/features/profile/components/view-profile/view-profile.component.scss
+++ b/src/app/features/profile/components/view-profile/view-profile.component.scss
@@ -1,9 +1,11 @@
+@import '../../../../../styles/variables.scss';
+
 .profile {
   .btn {
-    background-color: #d6dbdf;
+    background-color: $text-light;
     border: none;
     border-radius: 0.25rem;
-    color: #30495f;
+    color: $blue;
     font-size: 1.4rem;
     padding: 10px 80px;
     text-transform: uppercase;
@@ -26,9 +28,9 @@
   }
 
   &__inner {
-    background-color: #30495f;
+    background-color: $blue;
     border-radius: 0.5rem;
-    color: #d6dbdf;
+    color: $text-light;
     padding: 1em;
 
     & + .profile__inner {
