--- a/src/app/modules/ui/components/feature-header/feature-header.component.html
+++ b/src/app/modules/ui/components/feature-header/feature-header.component.html
@@ -1,4 +1,4 @@
-<p>
-  feature-header works!
-  <app-feature-headline text="text"></app-feature-headline>
-</p>
+<div class="feature-header">
+  <app-feature-headline [text]="text"></app-feature-headline>
+  <ng-content></ng-content>
+</div>
