--- a/src/app/features/dashboard/components/view-dashboard/view-dashboard.component.html
+++ b/src/app/features/dashboard/components/view-dashboard/view-dashboard.component.html
@@ -1,9 +1,5 @@
 <div class="dashboard">
-  <div class="dashboard__header dashboard__inner">
-    <h2 class="dashboard__heading">
-      Your Dashboard
-    </h2>
-  </div>
+  <app-feature-header text="Your Dashboard"></app-feature-header>
   <div class="dashboard__body dashboard__inner">
     <h3 class="dashboard__subheading">Time Remaining: <span
         class="dashboard__subheading__detail">{{ timeRemaining.toFixed(1) }} Days</span></h3>
