--- a/src/app/features/games/components/edit-game/edit-game.component.html
+++ b/src/app/features/games/components/edit-game/edit-game.component.html
@@ -4,17 +4,13 @@
     *ngIf="(game$ | async) as game" 
     [formGroup]="editGame" 
     (ngSubmit)="onSubmit()">
-    <div class="edit-game__header edit-game__inner">
-      <h2 class="edit-game__heading">
-        Edit Game
-      </h2>
+    <app-feature-header text="Edit Game">
       <div class="edit-game__buttons">
         <button class="btn btn--success btn--secondary" type="submit" [disabled]="!editGame.valid">Save</button>
         <button class="btn btn--danger" (click)="onDelete($event)">Delete</button>
         <button class="btn btn--primary" (click)="onCancel($event)">Cancel</button>
-
       </div>
-    </div>
+    </app-feature-header>
     <div class="edit-game__body edit-game__inner">
       <div class="edit-game__form__element">
         <label class="edit-game__form__label" for="name">Name</label>
