--- a/src/app/features/games/components/view-games/view-games.component.html
+++ b/src/app/features/games/components/view-games/view-games.component.html
@@ -1,6 +1,6 @@
 <div class="games">
   <app-feature-header text="My Games">
-    <button class="btn" routerLink="/games/add">Add Game</button>
+    <app-button routerLink="/games/add">Add Game</app-button>
   </app-feature-header>
   <div class="games__body">
     <app-game 
