--- a/src/app/features/games/components/add-game/add-game.component.html
+++ b/src/app/features/games/components/add-game/add-game.component.html
@@ -1,6 +1,3 @@
-<p>
-  add-game works!
-</p>
 <div class="edit-game edit-game__form-element">
   <form 
     class="edit-game__form" 
@@ -9,11 +6,11 @@
     >
     <app-feature-header text="Add Game">
       <div class="edit-game__buttons">
-        <button class="btn btn--success btn--secondary" type="submit" [disabled]="!addGame.valid">Save</button>
-        <button class="btn btn--primary" (click)="onCancel($event)">Cancel</button>
+        <app-button class="btn--success btn--secondary" type="submit" [disabledValue]="!addGame.valid">Save</app-button>
+        <app-button class="btn--primary" (click)="onCancel($event)">Cancel</app-button>
       </div>
     </app-feature-header>
-    <div class="edit-game__body edit-game__inner">
+    <app-card>
       <div class="edit-game__form__element">
         <label class="edit-game__form__label" for="name">Name</label>
         <input class="edit-game__form__input" type="text" name="name" formControlName="name" />
@@ -46,6 +43,6 @@
         <label class="edit-game__form__label" for="priority">Priority</label>
         <input class="edit-game__form__input" type="number" name="priority" formControlName="priority" />
       </div>
-    </div>
+    </app-card>
   </form>
 </div>
