--- a/src/app/modules/ui/components/button/button.component.scss
+++ b/src/app/modules/ui/components/button/button.component.scss
@@ -1,6 +1,6 @@
 @import '../../../../../styles/variables.scss';
 
-button {
+.btn {
   background-color: $text-light;
   border: none;
   border-radius: 0.25rem;
@@ -11,21 +11,21 @@ button {
   text-transform: uppercase;
   transition: all 0.5s ease-in-out;
 
-  &.primary {
-    background-color: $green;
-  }
+    &--danger {
+      background-color: $red;
+      color: $text-light;
+    }
 
-  &.secondary {
-    background-color: $red;
-    color: $text-light;
-  }
+    &--secondary {
+      background-color: $green;
+    }
 
-  &:hover {
-    cursor: pointer;
-    opacity: 0.8;
-  }
+    &:hover {
+      cursor: pointer;
+      opacity: 0.8;
+    }
 
-  &:disabled {
-    background-color: grey;
+    &:disabled {
+      background-color: grey;
+    }
   }
-}
